[localserver] implement message content access
