# app/src/main/java/me/capcom/smsgateway/modules/localserver/domain/messages/HashedMessage.kt
@@ -1,0 +1,5 @@
+package me.capcom.smsgateway.modules.localserver.domain.messages
+
+data class HashedMessage(
+    val hash: String,
+)
